Fix overflow of map popup

--- a/src/components/Maps/style.module.less
+++ b/src/components/Maps/style.module.less
@@ -3,6 +3,7 @@
 :global {
   .mapboxgl-map {
     overflow: visible !important;
+    z-index: 2;
   }
 
   .mapboxgl-canvas-container {
